fixes horizontal overflow

--- a/css/style.css
+++ b/css/style.css
@@ -383,3 +383,6 @@
 .socials{
    display: flex;
 }
+html{overflow-x:hidden;
+    
+}
